Classix was rewritten in Vala
* configure.ac: bumped version to 0.4
* Python code removed, Vala code added.
* Initial support for displaying inclusion and exclusion notes.
* Read data from the original pure-text data file and its indexes
  instead of from a generated data base.
* Refer to HACKING for instructions on how to use the data files.
* GUI is in Brazilian Portuguese: no need for translation
* ChangeLog was removed, use 'git log' instead.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+===========
+Version 0.4
+===========
+
+* Removed support for Hildon/Maemo.
+* Removed command-line user interface.
+* Removed the save results to text file feature.
+* Removed fullscreen mode.
+* Brazilian Portuguese-only graphical user interface.
+* Pressing Control+L or the mnemonic key moves focus to the search field.
+* A bottom pane displays inclusion and exclusion notes about the 
+  selected condition, allowing the user to select the codes more 
+  appropriately.
+* Text-based backend, with the speed of the old SQLite backend and the 
+  same results, but with smaller package size and less dependencies.
+* Rewrote in Vala.
+* Ported to GTK+ 3.
+
 =============
 Version 0.3.1
 =============
